plugins {
    id 'java'
}

sourceCompatibility = '11'
targetCompatibility = '11'

compileJava {
    options.compilerArgs = [
            "--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
            "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
            "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
            "-XDshould-stop.ifError=PROCESS"
    ]
}

compileTestJava {
    options.compilerArgs = [
            "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
    ]
}

dependencies {
    //compile files("${System.getProperty('java.home')}/../lib/tools.jar")
    implementation project(':tragulus')
    annotationProcessor project(':tragulus')
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
}


test {
    useJUnitPlatform()
}

//jar {
//    manifest {
//        attributes(
//                'Implementation-Title': project.name,
//                'Implementation-Version': project.version)
//    }
//}